# nuclear-footprints

./: .gitignore  README.md  environment.yaml  index.html  pyproject.toml
assets/pages/protocols/: 02.html  04.html  protocol-cold-war-legacy.html  protocol-echoes-of-detonations.html  protocol-global-nuclear-power-tracker.html  protocol-global-nuclear-reactor-status.html  protocol-global_nuclear_arsenals_today.html  protocol-no-safe-distance-after-chernobyl.html  protocol-nuclear-explosions.html  protocol-nuclear-proliferation.html  protocol-population-change-after-chernobyl.html  protocol-population-change-after-chornobyl.html  protocol-rise-and-fall-of-nuclear-arsenals.html  protocol-the-invisible-footprint-of-chornobyl.html  protocol-the-invisible-footprint.html  protocol-the_rise_of_global_nuclear_safety.html
assets/script/: script.js
assets/style/: style.css
notebooks/: cold-war-legacy.ipynb  data-exploration.ipynb  echoes-of-detonations.ipynb  global-nuclear-power-tracker.ipynb  global-nuclear-reactor-status.ipynb  global_nuclear_arsenals_today.ipynb  no-safe-distance-after-chernobyl.ipynb  no-safe-distance-after-chornobyl.ipynb  nuclear-explosions-cleaning.ipynb  nuclear-proliferation.ipynb  population-change-after-chernobyl.ipynb  population-change-after-chornobyl.ipynb  rise-and-fall-of-nuclear-arsenals.ipynb  the-invisible-footprint-of-chernobyl.ipynb  the-invisible-footprint-of-chornobyl.ipynb  the-invisible-footprint.ipynb  the_rise_of_global_nuclear_safety.ipynb
src/: const.py  nuclear-warhead-stockpiles-lines.py
(+4 files in other folders)
